--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@
   --itm-logo-color: #afb1b8;
   --item-card: 30px;
   --icon-fill: #afb1b8;
+  --animation-cubic: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 body {
@@ -555,4 +556,43 @@ img {
 .client-link:hover,
 .client-link:focus {
   border-color: var(--accent-color);
+}
+/*--------------------------------------- modal -------------------------------------------------*/
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+}
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  min-width: 528px;
+  min-height: 581px;
+  background: #fff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+.modal-link {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  background: #fff;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+}
+.modal-item-close {
 }
