--- a/css/styles.css
+++ b/css/styles.css
@@ -98,6 +98,8 @@ img {
 }
 .link {
   display: inline-block;
+}
+.сurrent-page {
   position: relative;
 }
 .links-nav {
@@ -137,7 +139,7 @@ img {
   color: var(--accent-color);
 }
 
-.link::after {
+.сurrent-page::after {
   content: '';
   position: absolute;
   bottom: -1px;
@@ -146,15 +148,15 @@ img {
   height: 4px;
   background-color: var(--accent-color);
   border-radius: 2px;
-  opacity: 0;
+  /* opacity: 0; */
 
-  transform: scaleX(0);
-  transition: opacity 250ms var(--animation-cubic), transform 250ms var(--animation-cubic);
+  /* transform: scaleX(0);
+  transition: opacity 250ms var(--animation-cubic), transform 250ms var(--animation-cubic); */
 }
 
 .link:hover:after {
   opacity: 1;
-  transform: scaleX(1);
+  /* transform: scaleX(1); */
 }
 
 .item-mail-svg {
@@ -577,8 +579,10 @@ img {
   left: 0;
   width: 100%;
   height: 100%;
+  opacity: 1;
   z-index: 2;
   background-color: rgba(0, 0, 0, 0.2);
+  transition: opacity 250ms var(--animation-cubic);
 }
 .backdrop.is-hidden {
   opacity: 0;
@@ -597,6 +601,7 @@ img {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+  transition: transform 250ms var(--animation-cubic);
 }
 .modal-link {
   position: absolute;
