--- a/css/styles.css
+++ b/css/styles.css
@@ -357,7 +357,13 @@ img {
   transition: background 250ms var(--animation-cubic);
 }
 .footer-item-fill {
+  transform: scale(1);
   fill: var(--accent-text-color);
+  transition: transform 250ms var(--animation-cubic), fill 250ms var(--animation-cubic);
+}
+.footer-item-fill:hover {
+  transform: scale(1.25);
+  fill: #fff;
 }
 /* ----------------------------------INDEXT.HTML ----------------------------------------*/
 
@@ -520,21 +526,27 @@ img {
   width: 100%;
   height: 100%;
   border-radius: 50%;
+
+  transform: scale(1);
+  transition: transform 250ms var(--animation-cubic);
 }
 
 .comand-link {
   fill: var(--icon-fill);
-  transition: fill 250ms var(--animation-cubic);
+  transform: scale(1);
+  transition: fill 250ms var(--animation-cubic), transform 250ms var(--animation-cubic);
 }
 
 .social-link:hover .comand-link,
 .social-link:focus .comand-link {
   fill: var(--accent-text-color);
+  transform: scale(1.25);
 }
 
 .social-link:hover,
 .social-link:focus {
   background-color: var(--accent-color);
+  transform: scale(1.25);
 }
 /* ------------------------- Block-clients-------------------------- */
 .client-list {
