--- a/css/styles.css
+++ b/css/styles.css
@@ -228,12 +228,11 @@ img {
 }
 .card-action {
   position: absolute;
-  top: 0;
+  top: 100%;
   left: 0;
   height: 100%;
-  opacity: 0;
   background-color: rgba(33, 150, 243, 0.9);
-  transform: translateY(100%);
+  transform: translateY(0);
   transition: transform 250ms var(--animation-cubic);
 }
 .card-action-text {
@@ -244,9 +243,9 @@ img {
   color: var(--accent-text-color);
 }
 .card:hover .card-action {
-  transform: translateY(0);
-  opacity: 1;
+  transform: translateY(-100%);
 }
+
 .project-list {
   display: flex;
   flex-wrap: wrap;
@@ -589,39 +588,48 @@ img {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   opacity: 1;
   z-index: 2;
   background-color: rgba(0, 0, 0, 0.2);
-  transition: opacity 250ms var(--animation-cubic);
+  transition: opacity 250ms var(--animation-cubic), visability 250ms;
 }
 .backdrop.is-hidden {
   opacity: 0;
   pointer-events: none;
   visibility: hidden;
 }
-
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0.7);
+  transition: transform 250ms;
+}
 .modal {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+
   min-width: 528px;
   min-height: 581px;
   background: #fff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  transition: transform 250ms var(--animation-cubic);
+
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 250ms var(--animation-cubic) scale(1);
 }
+
 .modal-link {
   position: absolute;
   top: 8px;
   right: 8px;
   width: 30px;
   height: 30px;
-  background: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: transparent;
   border-radius: 50%;
   border: 1px solid rgba(0, 0, 0, 0.1);
 }
